fix: update text spacing to follow WCAG22 guidelines(#154)

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,7 +35,7 @@ $font-weight-semi-bold: 550;
 
 // Spacing
 $grid-gutter: 40px;
-$spacing-text: 40px;
+$spacing-text: 32px;
 
 $footer-line-height: 32px;
 $footer-icon-width: 36px;
